--- a/src/app/admin/user-list/user-list.component.html
+++ b/src/app/admin/user-list/user-list.component.html
@@ -1,79 +1,7 @@
-<div class="flex h-screen font-roboto">
-  <!-- Barre latérale -->
-  <aside id="default-sidebar" class="fixed top-16 bg-teal-600 z-40 w-48 h-screen transition-transform -translate-x-full sm:translate-x-0" aria-label="Sidebar">
-    <div class="h-full mt-2 py-2 overflow-y-auto px-3">
-      <ul class="space-y-1 font-medium">
-        <li>
-          <a [routerLink]="['/admin/interface']" class="flex items-center p-2 text-white rounded-lg hover:bg-teal-600 transition duration-300 ease-in-out">
-            <mat-icon>home</mat-icon>
-            <span class="flex-1 ml-2 whitespace-nowrap">Accueil</span>
-          </a>
-        </li>
-        <li>
-          <a  [routerLink]="['/admin/listExpert']" class="flex items-center p-2 text-white rounded-lg hover:bg-teal-600 transition duration-300 ease-in-out">
-            <mat-icon>people</mat-icon>
-            <span class="flex-1 ml-2 whitespace-nowrap">Liste d'expert</span>
-          </a>
-        </li>
-        <li>
-          <a  [routerLink]="['/admin/listAgentService']" class="flex items-center p-2 text-white rounded-lg hover:bg-teal-600 transition duration-300 ease-in-out">
-            <mat-icon>engineering</mat-icon>
-            <span class="flex-1 ml-2 whitespace-nowrap">Agent de service</span>
-          </a>
-        </li>
-        <li>
-          <a [routerLink]="['/admin/listUser']" class="flex items-center p-2 text-white rounded-lg hover:bg-teal-600 transition duration-300 ease-in-out">
-            <mat-icon>person</mat-icon>
-            <span class="flex-1 ml-2 whitespace-nowrap">Liste d'utilisateur</span>
-          </a>
-        </li>
-      </ul>
-      <hr class="my-2 border-teal-500">
-      <div class="flex flex-col items-center justify-center space-y-1">
-        <p class="text-white text-xs text-center">Merci de votre visite !</p>
-        <p class="text-white text-xs text-center">© Flesk Cover</p>
-      </div>
-    </div>
-  </aside>
+<div class="flex">
+  <app-dehasbort/>
 
-  <!-- Barre de navigation -->
-  <nav class="bg-gray-50 text-gray-900 fixed top-0 left-0 w-full z-50 p-1 shadow-lg">
-    <div class="container mx-auto flex justify-between items-center px-3">
-      <div class="flex items-center space-x-2 ml-2">
-        <a routerLink="/" class="flex items-center text-xl font-semibold text-teal-800">
-          <i class="fas fa-umbrella w-6 h-6 mr-1"></i>
-          Flesk Cover
-        </a>
-        <h2 class="text-sm font-medium text-gray-700">Roulez sereinement, vivez pleinement</h2>
-      </div>
-
-      <div class="flex items-center space-x-2">
-        <button class="h-8 w-8 flex items-center justify-center rounded-full border border-teal-800 hover:bg-teal-100 focus:outline-none">
-          <svg class="h-4 w-4 text-teal-800" fill="currentColor" viewBox="0 0 20 20">
-            <path d="M2.94 6.33a2 2 0 0 1 1.5-.66h11.12a2 2 0 0 1 1.5.66l-6.06 3.95-6.06-3.95zM2 7.67V14a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.67l-5.88 3.83a1 1 0 0 1-1.06 0L2 7.67z" />
-          </svg>
-        </button>
-
-        <button class="h-8 w-8 flex items-center justify-center rounded-full border border-teal-800 hover:bg-teal-100 focus:outline-none">
-          <svg class="h-4 w-4 text-teal-800" fill="currentColor" viewBox="0 0 20 20">
-            <path d="M10 2a6 6 0 0 0-6 6v2c0 1.06-.57 2.02-1.5 2.58-.23.14-.5.42-.5.92v1c0 .55.45 1 1 1h15a1 1 0 0 0 1-1v-1c0-.5-.27-.78-.5-.92C16.57 12.02 16 11.06 16 10V8a6 6 0 0 0-6-6zM8 17a2 2 0 1 0 4 0H8z" />
-          </svg>
-        </button>
-
-        <div class="flex items-center space-x-2 bg-gray-100 p-1 rounded-lg">
-          <div class="flex flex-col">
-            <span class="text-teal-800 font-medium text-sm">admin</span>
-            <div class="flex space-x-2 text-xs text-gray-600 mt-1">
-              <a href="#" class="hover:text-red-600">Déconnexion</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </nav>
-
- <!-- Contenu principal -->
- <div class="flex-1 p-6 sm:ml-64 mt-16">
+  <div class="flex-1 mt-20 ml-60">
   <!-- Titre de la page -->
   <h1 class="text-3xl font-bold text-teal-800 mb-6">Liste des utilisateurs</h1>
 
