--- a/src/app/assure/payment/payment-success/payment-success.component.html
+++ b/src/app/assure/payment/payment-success/payment-success.component.html
@@ -55,5 +55,11 @@
         <span class="text-green-600 font-semibold">{{verificationResult.status}}</span>
       </div>
     </div>
+    <div class="back-link mt-8 border-t border-gray-200 pt-4">
+      <a [routerLink]="['/dashboard-assure', 'interface']" class="text-teal-800 hover:text-teal-900 flex items-center">
+        <mat-icon>arrow_back</mat-icon>
+        <span class="ml-1">Retour </span>
+      </a>
+    </div>
   </div>
 </div>
