--- a/src/app/assure/devi/devi.component.html
+++ b/src/app/assure/devi/devi.component.html
@@ -1,9 +1,7 @@
-<div class="flex flex-col md:flex-row">
-  <!-- Dashboard -->
-  <app-dashboard class="w-full md:w-64 bg-white shadow-md"></app-dashboard>
+<div class="flex">
+  <app-dashboard/>
 
-  <!-- Contenu principal -->
-  <div class="flex-1 p-4 md:p-8 bg-gray-100 min-h-screen">
+  <div class="flex-1 mt-20 ml-60">
     <!-- Étape 1 -->
     <div *ngIf="etape === 1" class="p-8 bg-gray-100 min-h-screen">
       <div class="max-w-4xl mx-auto bg-white p-8 rounded-lg shadow-md">
