--- a/src/app/assure/mes-ca/mes-ca.component.html
+++ b/src/app/assure/mes-ca/mes-ca.component.html
@@ -1,7 +1,7 @@
 <div class="flex">
-  <app-dashboard></app-dashboard>
+  <app-dashboard/>
 
-  <div class="flex-1 mt-30 ml-50">
+  <div class="flex-1 mt-20 ml-60">
     <section class="min-h-screen flex items-center justify-center p-4">
 <main class="flex-1 ml-60 bg-gray-50 p-6">
   <div class="max-w-6xl mx-auto">
