--- a/src/app/assure/mes-re-cu/mes-re-cu.component.html
+++ b/src/app/assure/mes-re-cu/mes-re-cu.component.html
@@ -1,4 +1,7 @@
-<div class="min-h-full bg-gray-100">
+<div class="flex">
+  <app-dashboard/>
+
+  <div class="flex-1 mt-20 ml-60">
   <div class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
     <main class="px-4 py-6 sm:px-0">
       <div class="max-w-md mx-auto">
