--- a/src/app/assure/payement-ca/payement-ca.component.html
+++ b/src/app/assure/payement-ca/payement-ca.component.html
@@ -1,5 +1,7 @@
-<!-- payment-result.component.html -->
-<div class="min-h-screen flex flex-col items-center justify-center bg-gray-50 p-4">
+<div class="flex">
+  <app-dashboard/>
+
+  <div class="flex-1 mt-20 ml-60">
   <!-- Loader -->
   <div *ngIf="isLoading" class="flex flex-col items-center space-y-4">
     <div class="w-16 h-16 border-4 border-blue-500 border-t-transparent rounded-full animate-spin"></div>
