--- a/src/app/assure/renouvellement-ca/renouvellement-ca.component.html
+++ b/src/app/assure/renouvellement-ca/renouvellement-ca.component.html
@@ -1,5 +1,7 @@
-<div class="flex flex-col min-h-screen font-roboto">
-  
+<div class="flex">
+  <app-dashboard/>
+
+  <div class="flex-1 mt-20 ml-60">
   <main class="flex-1 ml-60 bg-gray-50">
     <div class="max-w-6xl mx-auto p-8">
       <div class="relative bg-white flex flex-col items-center rounded-2xl shadow-teal-100 shadow-lg max-w-md w-full p-8">
@@ -24,7 +26,37 @@
                   class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-teal-800 focus:border-teal-800 block w-full p-2"
                   placeholder="Matricule du véhicule">
             <div *ngIf="renewalForm.get('Imat')?.invalid && renewalForm.get('Imat')?.touched" class="text-red-500 text-sm mt-1">
-              Le matricule est requis
+              Le matricule doit être sous cette forme 4567TU123
+            </div>
+          </div>
+
+          <!-- Sélection de pack -->
+          <div>
+            <label class="block mb-1 text-sm font-medium text-gray-700">Pack d'assurance</label>
+            <div class="mb-2">
+              <div class="flex items-center mb-2">
+                <input type="radio" id="keepSamePack" formControlName="packOption" value="same"
+                      class="w-4 h-4 text-teal-800 bg-gray-100 border-gray-300 focus:ring-teal-800">
+                <label for="keepSamePack" class="ml-2 text-sm font-medium text-gray-700">Garder mon pack actuel</label>
+              </div>
+              <div class="flex items-center">
+                <input type="radio" id="changePack" formControlName="packOption" value="change"
+                      class="w-4 h-4 text-teal-800 bg-gray-100 border-gray-300 focus:ring-teal-800">
+                <label for="changePack" class="ml-2 text-sm font-medium text-gray-700">Changer de pack</label>
+              </div>
+            </div>
+
+            <div *ngIf="renewalForm.get('packOption')?.value === 'change'" class="mt-3">
+              <select formControlName="packValue"
+                      class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-teal-800 focus:border-teal-800 block w-full p-2">
+                <option value="" disabled selected>Sélectionnez un pack</option>
+                <option value="essentiel">Pack Essentiel</option>
+                <option value="dommage">Pack Dommage et Collision</option>
+                <option value="tierce">Pack Tierce</option>
+              </select>
+              <div *ngIf="renewalForm.get('packOption')?.value === 'change' && renewalForm.get('packValue')?.invalid && renewalForm.get('packValue')?.touched" class="text-red-500 text-sm mt-1">
+                Veuillez sélectionner un pack
+              </div>
             </div>
           </div>
 
