--- a/src/app/agent-service/interface-agent/interface-agent.component.html
+++ b/src/app/agent-service/interface-agent/interface-agent.component.html
@@ -130,20 +130,19 @@
             <p class="text-gray-600">Créer un nouveau contrat d'assurance vie</p>
           </div>
 
-          <!-- Reçu de Paiement -->
-          <div
-            class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition-shadow cursor-pointer border-l-4 border-teal-500"
-            routerLink="/vie/recu-paiement">
+          <a [routerLink]="['/agent/devisCVie']"
+          class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition-shadow cursor-pointer border-l-4 border-teal-500 block">
+
             <div class="flex items-center mb-4">
               <div class="p-3 rounded-full bg-teal-100 text-teal-800 mr-4">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 9V7a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2m2 4h10a2 2 0 002-2v-6a2 2 0 00-2-2H9a2 2 0 00-2 2v6a2 2 0 002 2zm7-5a2 2 0 11-4 0 2 2 0 014 0z" />
                 </svg>
               </div>
-              <h3 class="text-lg font-semibold text-gray-800">Reçu de Paiement</h3>
+              <h3 class="text-lg font-semibold text-gray-800">Devis</h3>
             </div>
-            <p class="text-gray-600">Générer et gérer les reçus de paiement</p>
-          </div>
+            <p class="text-gray-600">Devis Contrat Assurance Vie - Emprunteur</p>
+        </a>
 
           <!-- Touch Vert -->
           <div
